api to GET fix (#159)
* api to GET fix

* api to GET fix

* publish update

* publish update

* publish update

* publish fix

* publish fix

* publish fix

* publish fix

* publish fix

* publish fix

* review comments fix

* review comments fix

* usher->progression

---------

Co-authored-by: Arcadius Ahouansou <arcadius@menelic.com>