@@ -18,7 +18,6 @@ import uk.gov.hmcts.cp.config.ObjectMapperConfig;
 import uk.gov.hmcts.cp.models.CourtListPayload;
 import uk.gov.hmcts.cp.openapi.model.CourtListType;
 import uk.gov.hmcts.cp.services.courtlistdownload.CourtListDownloadException;
-import uk.gov.hmcts.cp.services.courtlistdownload.CourtListFileResult;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
@@ -32,19 +31,17 @@ public class CourtListDataService {
 
     private static final ObjectMapper OBJECT_MAPPER = ObjectMapperConfig.getObjectMapper();
     private static final DateTimeFormatter DATE_FORMAT = DateTimeFormatter.ISO_LOCAL_DATE;
+    private static final String COURT_LIST_PAYLOAD_PATH = "/listing-service/query/api/rest/listing/courtlistpayload";
     private static final String COURT_LIST_PATH = "/listing-service/query/api/rest/listing/courtlist";
-    private static final String ACCEPT_COURTLIST = "application/vnd.listing.search.court.list+json";
-    private static final String CONTENT_TYPE_PDF = "application/pdf";
-    private static final String CONTENT_TYPE_WORD =
-            "application/vnd.openxmlformats-officedocument.wordprocessingml.document";
-    private static final String PDF_FILENAME = "CourtList.pdf";
-    private static final String WORD_FILENAME = "CourtList.docx";
+    private static final String ACCEPT_COURTLIST_PAYLOAD = "application/vnd.listing.search.court.list.payload+json";
+    private static final String PROGRESSION_COURTLIST_PATH = "/progression-service/query/api/rest/progression/courtlist";
+    private static final String ACCEPT_PROGRESSION_COURTLIST = "application/vnd.progression.search.court.list+json";
 
-    private static final Set<CourtListType> DOWNLOAD_TYPES_COURTLIST_API = EnumSet.of(
+    private static final Set<CourtListType> PROGRESSION_ENRICHED_TYPES = EnumSet.of(
             CourtListType.PUBLIC,
+            CourtListType.STANDARD,
             CourtListType.BENCH,
-            CourtListType.ALPHABETICAL,
-            CourtListType.JUDGE,
+            CourtListType.ONLINE_PUBLIC,
             CourtListType.USHERS_CROWN,
             CourtListType.USHERS_MAGISTRATE);
 
@@ -70,9 +67,12 @@ public class CourtListDataService {
             boolean restricted,
             String currentUserId,
             boolean includeApplications) {
-        String json = progressionQueryService.getCourtListPayload(
-                listId, courtCentreId, courtRoomId, startDate, endDate, restricted, currentUserId, includeApplications);
-        return json != null ? json : "{}";
+        if (PROGRESSION_ENRICHED_TYPES.contains(listId)) {
+            return progressionQueryService.getCourtListPayload(
+                    listId, courtCentreId, courtRoomId, startDate, endDate, restricted, currentUserId, includeApplications);
+        }
+        return fetchCourtListPayloadFromListing(
+                listId, courtCentreId, courtRoomId, startDate, endDate, restricted, includeApplications, currentUserId);
     }
 
     public CourtListPayload getCourtListPayload(
@@ -82,7 +82,7 @@ public class CourtListDataService {
             String endDate,
             String cjscppuid,
             boolean includeApplications) {
-        boolean restricted = cjscppuid != null && !cjscppuid.trim().isEmpty();
+        boolean restricted = cjscppuid != null && !cjscppuid.isBlank();
         String json = getCourtListData(listId, courtCentreId, null, startDate, endDate, restricted, cjscppuid, includeApplications);
 
         try {
@@ -93,18 +93,63 @@ public class CourtListDataService {
         }
     }
 
-    /**
-     * Calls listing's /courtlist endpoint which returns the rendered document directly (PDF for
-     * PUBLIC/BENCH/ALPHABETICAL/JUDGE, Word for USHERS_CROWN/USHERS_MAGISTRATE). Listing dispatches
-     * the right assembler per type, so this works for every supported listId. The response Content-Type
-     * tells us PDF vs Word; we pick the filename accordingly.
-     */
-    public CourtListFileResult getCourtListDocumentForDownload(
+    public String getCourtListPayloadForDownload(
             CourtListType courtListType, String courtCentreId, String courtRoomId,
-            LocalDate startDate, LocalDate endDate, String cjscppuid) {
-        if (!DOWNLOAD_TYPES_COURTLIST_API.contains(courtListType)) {
-            throw new CourtListDownloadException("Unsupported court list type for download: " + courtListType);
+            LocalDate startDate, LocalDate endDate, String cjscppuid, boolean restricted) {
+        if (PROGRESSION_ENRICHED_TYPES.contains(courtListType)) {
+            return progressionQueryService.getCourtListPayload(
+                    courtListType, courtCentreId, courtRoomId,
+                    startDate.format(DATE_FORMAT), endDate.format(DATE_FORMAT),
+                    restricted, cjscppuid, false);
         }
+        return fetchCourtListPayloadFromListing(
+                courtListType, courtCentreId, courtRoomId,
+                startDate.format(DATE_FORMAT), endDate.format(DATE_FORMAT),
+                restricted, false, cjscppuid);
+    }
+
+    public byte[] fetchCourtListPdfFromProgression(
+            CourtListType courtListType, String courtCentreId, String courtRoomId,
+            LocalDate startDate, LocalDate endDate, String cjscppuid, boolean restricted) {
+        if (courtListDataBaseUrl.isBlank()) {
+            throw new CourtListDownloadException("Court list data is not configured");
+        }
+        if (cjscppuid == null || cjscppuid.isBlank()) {
+            throw new CourtListDownloadException("CJSCPPUID is required for progression /courtlist");
+        }
+
+        UriComponentsBuilder builder = UriComponentsBuilder.fromUriString(courtListDataBaseUrl).path(PROGRESSION_COURTLIST_PATH)
+                .queryParam("listId", courtListType.name())
+                .queryParam("courtCentreId", courtCentreId)
+                .queryParam("startDate", startDate.format(DATE_FORMAT))
+                .queryParam("endDate", endDate.format(DATE_FORMAT))
+                .queryParam("restricted", restricted);
+        if (courtRoomId != null && !courtRoomId.isBlank()) {
+            builder.queryParam("courtRoomId", courtRoomId);
+        }
+        String url = builder.build().toUriString();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Collections.singletonList(MediaType.parseMediaType(ACCEPT_PROGRESSION_COURTLIST)));
+        headers.set(AppConstant.CJSCPPUID, cjscppuid);
+
+        try {
+            ResponseEntity<byte[]> response = publicCourtListRestTemplate.exchange(
+                    url, HttpMethod.GET, new HttpEntity<>(headers), byte[].class);
+            byte[] body = response.getBody();
+            if (body == null || body.length == 0) {
+                throw new CourtListDownloadException("Progression /courtlist returned empty response");
+            }
+            return body;
+        } catch (RestClientException e) {
+            log.error("Progression /courtlist call failed for listId={}, courtCentreId={}", courtListType, courtCentreId, e);
+            throw new CourtListDownloadException("Failed to fetch court list document from progression: " + e.getMessage(), e);
+        }
+    }
+
+    public byte[] fetchCourtListPdfFromListing(
+            CourtListType courtListType, String courtCentreId, String courtRoomId,
+            LocalDate startDate, LocalDate endDate, String cjscppuid, boolean restricted) {
         if (courtListDataBaseUrl.isBlank()) {
             throw new CourtListDownloadException("Court list data is not configured");
         }
@@ -114,14 +159,14 @@ public class CourtListDataService {
                 .queryParam("courtCentreId", courtCentreId)
                 .queryParam("startDate", startDate.format(DATE_FORMAT))
                 .queryParam("endDate", endDate.format(DATE_FORMAT))
-                .queryParam("restricted", false);
+                .queryParam("restricted", restricted);
         if (courtRoomId != null && !courtRoomId.isBlank()) {
             builder.queryParam("courtRoomId", courtRoomId);
         }
         String url = builder.build().toUriString();
 
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Collections.singletonList(MediaType.parseMediaType(ACCEPT_COURTLIST)));
+        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_PDF));
         if (cjscppuid != null && !cjscppuid.isBlank()) {
             headers.set(AppConstant.CJSCPPUID, cjscppuid);
         }
@@ -131,17 +176,51 @@ public class CourtListDataService {
                     url, HttpMethod.GET, new HttpEntity<>(headers), byte[].class);
             byte[] body = response.getBody();
             if (body == null || body.length == 0) {
-                throw new CourtListDownloadException("Court list API returned empty response");
+                throw new CourtListDownloadException("Court list PDF API returned empty response");
             }
-            MediaType contentType = response.getHeaders().getContentType();
-            boolean isWord = contentType != null
-                    && contentType.toString().toLowerCase().contains("wordprocessingml");
-            return isWord
-                    ? new CourtListFileResult(body, CONTENT_TYPE_WORD, WORD_FILENAME)
-                    : new CourtListFileResult(body, CONTENT_TYPE_PDF, PDF_FILENAME);
+            return body;
         } catch (RestClientException e) {
-            log.error("Court list API call failed for listId={}, courtCentreId={}", courtListType, courtCentreId, e);
-            throw new CourtListDownloadException("Failed to fetch court list: " + e.getMessage(), e);
+            log.error("Court list PDF API call failed for listId={}, courtCentreId={}", courtListType, courtCentreId, e);
+            throw new CourtListDownloadException("Failed to fetch court list PDF: " + e.getMessage(), e);
+        }
+    }
+
+    private String fetchCourtListPayloadFromListing(
+            CourtListType listId, String courtCentreId, String courtRoomId,
+            String startDate, String endDate, boolean restricted, boolean includeApplications, String cjscppuid) {
+        if (courtListDataBaseUrl.isBlank()) {
+            throw new CourtListDownloadException("Court list data is not configured");
+        }
+
+        UriComponentsBuilder builder = UriComponentsBuilder.fromUriString(courtListDataBaseUrl).path(COURT_LIST_PAYLOAD_PATH)
+                .queryParam("listId", listId.name())
+                .queryParam("courtCentreId", courtCentreId)
+                .queryParam("startDate", startDate)
+                .queryParam("endDate", endDate)
+                .queryParam("restricted", restricted)
+                .queryParam("includeApplications", includeApplications);
+        if (courtRoomId != null && !courtRoomId.isBlank()) {
+            builder.queryParam("courtRoomId", courtRoomId);
+        }
+        String url = builder.build().toUriString();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Collections.singletonList(MediaType.parseMediaType(ACCEPT_COURTLIST_PAYLOAD)));
+        if (cjscppuid != null && !cjscppuid.isBlank()) {
+            headers.set(AppConstant.CJSCPPUID, cjscppuid);
+        }
+
+        try {
+            ResponseEntity<String> response = publicCourtListRestTemplate.exchange(
+                    url, HttpMethod.GET, new HttpEntity<>(headers), String.class);
+            String body = response.getBody();
+            if (body == null || body.isBlank()) {
+                throw new CourtListDownloadException("Court list payload API returned empty response");
+            }
+            return body;
+        } catch (RestClientException e) {
+            log.error("Court list payload API call failed for listId={}, courtCentreId={}", listId, courtCentreId, e);
+            throw new CourtListDownloadException("Failed to fetch court list payload: " + e.getMessage(), e);
         }
     }
 }
